--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,13 +15,16 @@
 
     <TextView
         android:id="@+id/registerInfo"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
-        android:text="사용자 정보를 등록해주세요."
-        android:textSize="24sp" />
+        android:background="@color/design_default_color_primary"
+        android:gravity="center"
+        android:text="사용자 정보를 등록해주세요"
+        android:textColor="#FFFFFF"
+        android:textSize="22sp" />
 
 
     <RadioGroup
@@ -98,9 +101,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="5dp"
+        android:background="@color/design_default_color_primary"
         android:gravity="center"
         android:text="일주일에 얼마나 운동하시나요?"
-        android:textSize="20dp" />
+        android:textColor="#FFFFFF"
+        android:textSize="22dp" />
 
     <RadioGroup
         android:id="@+id/actGroup"
