--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -38,26 +38,23 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"></Button>
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/camera_button"
-        android:gravity="right">
 
-        <Button
+        <ImageButton
             android:id="@+id/confirmButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#000000"
-            android:textColor="#FFFFFF"
-            android:textSize="18sp"
-            android:text="확인"
-            android:layout_marginEnd="10dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginLeft="10dp"
+            android:adjustViewBounds="true"
+            android:background="#00FF0000"
+            android:padding="0dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/arrow_button"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"></Button>
+            app:layout_constraintStart_toEndOf="@+id/pictureButton"
+            app:layout_constraintTop_toTopOf="parent"></ImageButton>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
