음식 정보 팝업창 디자인 수정2

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="Foodpopup_name">#000000</color>
     <color name="red">#1FE82210</color>
     <color name="redS">#E4EC352C</color>
+    <color name="white">#FFFFFF</color>
 </resources>
